--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
         // Load product details dynamically
         function loadProduct(productId) {
             const xhr = new XMLHttpRequest();
-            xhr.open("GET", `api/product_details.php?id=${productId}`, true);
+            xhr.open("GET", `php/product.php?id=${productId}`, true);
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4 && xhr.status === 200) {
                     const product = JSON.parse(xhr.responseText);
@@ -26,7 +26,7 @@
         function addToCart(productId) {
             const quantity = document.getElementById('quantity').value;
             const xhr = new XMLHttpRequest();
-            xhr.open("POST", "api/add_to_cart.php", true);
+            xhr.open("POST", "php/add_to_cart.php", true);
             xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4) {
